순수 리액트 익히기

--- a/섹션 2. 리액트 프로젝트 시작하기/hello-world/simple1.html
+++ b/섹션 2. 리액트 프로젝트 시작하기/hello-world/simple1.html
@@ -2,6 +2,17 @@
   <body>
     <h2>안녕하세요. 이 강의가 마음에 드시면 좋아요 버튼 눌러주세요.</h2>
     <div id="root"></div>
+
+    <h3>2. 렌더링을 위한 작업 * 1</h3>
+    <div id="root1"></div>
+    <h3>2. 렌더링을 위한 작업 * 2</h3>
+    <div id="root2"></div>
+    <h3>2. 렌더링을 위한 작업 * 3</h3>
+    <div id="root3"></div>
+
+    <h3>3. 렌터링을 위한 작업 (3개를 하나의 리액트 돔에서 해결)</h3>
+    <div id="root4"></div>
+
     <script src="react.development.js"></script>
     <script src="react-dom.development.js"></script>
     <script src="simple1.js"></script>
